--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: poppins;
+    text-wrap: wrap;
+    
     /* box-sizing: border-box; */
   }
   body {
@@ -15,7 +18,7 @@
 display: flex;
     font-size: 15px;
     font-weight: bolder;
-    font-family: sans-serif;
+    
     align-items: center;
     justify-content: center;
 
@@ -78,7 +81,7 @@ display: flex;
   flex-direction: column;
       font-size: 12px;
       font-weight: bolder;
-      font-family: sans-serif;
+      
       align-items: center;
       justify-content: center;
       margin-top: 50px;
@@ -86,8 +89,7 @@ display: flex;
     }
     .profile {
       border-radius: 30px;
-      border: 2px solid rgba(0, 0, 0);
-      background-color: #ff910069;
+      
       height: 500px;
       width: 300px;
       line-break: auto;
